[package]
name = "abstract-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = "0.14.1"
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "png",
    "x11",
] }
rand = "0.8.5"

# For WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3